--- a/Exercises/EN/Basic/01_Python_Sintax.ipynb
+++ b/Exercises/EN/Basic/01_Python_Sintax.ipynb
@@ -35,13 +35,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "\n",
-    "\n"
+    "25 + 5\n"
    ]
   },
   {
@@ -58,12 +69,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Start your code below:\n",
-    "\n",
+    "25 + 5 \n",
+    "20 - 7 \n",
+    "30 + 2 \n",
+    "67 - 22 \n",
     "\n"
    ]
   },
@@ -122,13 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nprint(55 + 5)\\nprint(300 - 8)\\nprint(21+67)\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "\n",
-    "\n"
+    "print(55 + 5)\n",
+    "print(300 - 8)\n",
+    "print(21+67)\n"
    ]
   },
   {
@@ -145,16 +183,17 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-5e26be365760>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-5e26be365760>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(55 + 5) print(300 - 8) print(21 + 67)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "292\n",
+      "88\n"
      ]
     }
    ],
    "source": [
-    "print(55 + 5) print(300 - 8) print(21 + 67)"
+    "print(55 + 5); print(300 - 8); print(21 + 67)"
    ]
   },
   {
@@ -211,12 +250,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "5\n",
+      "-2\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
-    "\n",
+    "print(30 + 20 + 50)\n",
+    "print(5)\n",
+    "print(-2)\n",
     "\n"
    ]
   },
@@ -249,13 +300,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n",
+      "21\n",
+      "-21\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "\n",
-    "\n"
+    "print(58+6)\n",
+    "print(21)\n",
+    "print(-21)\n"
    ]
   },
   {
@@ -300,13 +363,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "5\n",
+      "-5\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
-    "\n"
+    "print(5+21)\n",
+    "print(5)\n",
+    "print(-5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -325,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +416,7 @@
        "10"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,12 +496,38 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n",
+      "28.0\n",
+      "25\n",
+      "2\n",
+      "0b11 0b1 0b10\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "\n",
-    "\n"
+    "print(5*30)\n",
+    "print(56/2)\n",
+    "print(5**2)\n",
+    "\n",
+    "a = 3\n",
+    "b = 1\n",
+    "print(b^a)\n",
+    "print(bin(a), bin(b), bin(b^a))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
