--- a/Exercises/EN/Basic/02_Variables_and_Data_Types.ipynb
+++ b/Exercises/EN/Basic/02_Variables_and_Data_Types.ipynb
@@ -101,7 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "result = (50 + 6)"
    ]
   },
   {
