--- a/Exercises/EN/Basic/02_Variables_and_Data_Types.ipynb
+++ b/Exercises/EN/Basic/02_Variables_and_Data_Types.ipynb
@@ -87,6 +87,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,12 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1792\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
-    "result = (50 + 6)"
+    "result = (50 + 6) * 32\n",
+    "print(result)\n"
    ]
   },
   {
@@ -164,11 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 974 976\n"
+     ]
+    }
+   ],
    "source": [
-    "# Start your code below:\n"
+    "# Start your code below:\n",
+    "some_value = 10\n",
+    "some_result = (38+6-2)*23\n",
+    "print(some_value, some_result+8, some_value+some_result)"
    ]
   },
   {
@@ -315,15 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-bbf77a692946>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-bbf77a692946>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    income =\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7000\n"
      ]
     }
    ],
@@ -331,7 +357,8 @@
     "income = 2000\n",
     "\n",
     "# Start your code below:\n",
-    "income = \n"
+    "income = income + 5000\n",
+    "print(income)\n"
    ]
   },
   {
@@ -446,12 +473,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.5\n",
+      "102.5\n"
+     ]
+    }
+   ],
    "source": [
     "#Start your code below:\n",
-    "\n"
+    "\n",
+    "value_1 = 10\n",
+    "value_2 = 20.5\n",
+    "value_1 += 2.5\n",
+    "value_2 *= 5\n",
+    "print(value_1)\n",
+    "print(value_2)"
    ]
   },
   {
@@ -534,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +585,7 @@
        "2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,6 +593,13 @@
    "source": [
     "round(2.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -581,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -631,31 +680,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2\n",
+      "2.5\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "variable_1 = 2.5\n",
-    "print(round(2.5))\n",
-    "round(2.5)"
+    "print(round(variable_1))\n",
+    "print(variable_1)"
    ]
   },
   {
@@ -697,12 +738,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
-    "\n"
+    "value_1 = 11.2\n",
+    "value_2 = 2.5\n",
+    "value_1 = round(value_1)\n",
+    "value_2 = int(value_2)\n",
+    "print(value_1+value_2)"
    ]
   },
   {
@@ -826,14 +879,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "instagram\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "\n",
-    "\n"
+    "app_name = \"instagram\"\n",
+    "avarage_rating = \"4.5\"\n",
+    "total_rating = \"2161158\"\n",
+    "value = \"data\"\n",
+    "print(app_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -852,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
