--- a/Exercises/EN/Basic/03_Lists_and_For_Loops.ipynb
+++ b/Exercises/EN/Basic/03_Lists_and_For_Loops.ipynb
@@ -126,12 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676, 3.5] ['Instagram', 0.0, 'USD', 2161558, 4.5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
-    "\n"
+    "row_two = [\"Facebook\", 0.0 , \"USD\", 2974676, 3.5]\n",
+    "row_three = [\"Instagram\", 0.0,\"USD\", 2161558, 4.5]\n",
+    "print(row_two, row_three)"
    ]
   },
   {
@@ -151,9 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "print(len(row_one))\n",
@@ -180,9 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "print(row_one[4])"
@@ -197,9 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_two = ['Instagram',0.0, 'USD', 2161558, 4.5]\n",
@@ -228,20 +265,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2422346.3333333335\n",
+      "7267039\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_two = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
     "row_three = ['Clash of Clans', 0.0, 'USD', 2130805, 4.5]\n",
     "\n",
     "# Start your code below:\n",
-    "rating_one =\n",
-    "rating_two =\n",
-    "rating_three =\n",
-    "total_rating =\n",
-    "average_rating = "
+    "rating_one = row_one[3]\n",
+    "rating_two = row_two[3]\n",
+    "rating_three = row_three[3]\n",
+    "total_rating = rating_one + rating_three + rating_two\n",
+    "average_rating = total_rating/3\n",
+    "print(average_rating)\n",
+    "\n",
+    "def big_sum(terms):\n",
+    "    sum = 0\n",
+    "    for term in terms:\n",
+    "        sum = sum + term\n",
+    "    return(sum)\n",
+    "\n",
+    "totalrating = big_sum([rating_one, rating_two, rating_three])\n",
+    "print(totalrating)\n"
    ]
   },
   {
@@ -259,14 +315,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n",
+      "3.5\n",
+      "3.5\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "\n",
     "print(row_one[-1])\n",
-    "print(row_one[4])"
+    "print(row_one[4])\n",
+    "print(row_one[len(row_one)-1])"
    ]
   },
   {
@@ -292,29 +359,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2422346.3333333335\n"
+     ]
+    }
+   ],
    "source": [
     "row_1 = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_2 = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
     "row_3 = ['Clash of Clans', 0.0, 'USD', 2130805, 4.5]\n",
     "\n",
-    "##Your task starts here:\n"
+    "##Your task starts here:\n",
+    "total_rating = (row_one[-1] + row_two[-1], row_three[-1])\n",
+    "average_rating = totalrating/3\n",
+    "print(average_rating)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 4. Retrieving Multiple List Elements\n",
-    "There are occasions where we are asked to retrieve more than just one element from a list. \n",
+    "There are occasionsm where we are asked to retrieve more than just one element from a list. \n",
     "Take the list we have already worked with before: ['Facebook', 0.0, 'USD', 2974676, 3.5], and we're  interested in knowing only the name of the app and the data about ratings (the number of ratings and the rating). Take what we have learned so far, we can do it as the following:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,9 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 2974676, 3.5]\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "\n",
@@ -370,9 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_two = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
@@ -381,7 +489,12 @@
     "row_five = ['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n",
     "\n",
     "# Start your code below:\n",
-    "\n"
+    "fb_rating_data = [row_one[0], row_one[3], row_one[-1]]\n",
+    "insta_rating_data = [row_two[0], row_two[3], row_two[-1]]\n",
+    "pandora_rating_data = [row_five[0], row_five[3], row_five[-1]]\n",
+    "sum_rating = fb_rating_data[2] + insta_rating_data[2] + pandora_rating_data[2]\n",
+    "average_rating = sum_rating/3\n",
+    "print(average_rating)"
    ]
   },
   {
@@ -454,9 +567,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Clash of Clans', 0.0, 'USD']\n",
+      "['USD', 2130805, 4.5]\n"
+     ]
+    }
+   ],
    "source": [
     "row_three = ['Clash of Clans', 0.0, 'USD', 2130805, 4.5]\n",
     "\n",
@@ -480,9 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676]\n",
+      "[2974676, 3.5]\n",
+      "[0.0, 'USD', 1126879]\n"
+     ]
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_two = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
@@ -491,7 +623,13 @@
     "row_five = ['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n",
     "\n",
     "\n",
-    "# Start your code below:"
+    "# Start your code below:\n",
+    "first_four_elem_fb = row_one[:4]\n",
+    "last_two_elem_fb = row_one[-2:]\n",
+    "pna_2_3_4 = row_five[1:4]\n",
+    "print(first_four_elem_fb)\n",
+    "print(last_two_elem_fb)\n",
+    "print(pna_2_3_4)"
    ]
   },
   {
@@ -531,9 +669,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
+      "['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n",
+      "[['Facebook', 0.0, 'USD', 2974676, 3.5], ['Instagram', 0.0, 'USD', 2161558, 4.5]]\n"
+     ]
+    }
+   ],
    "source": [
     "data_set = [row_one, row_two, row_three, row_four, row_five]\n",
     "\n",
@@ -548,6 +696,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -556,9 +711,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
+      "Facebook\n"
+     ]
+    }
+   ],
    "source": [
     "data_set = [row_one, row_two, row_three, row_four, row_five]\n",
     "\n",
@@ -586,13 +750,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Facebook\n"
+     ]
+    }
+   ],
    "source": [
     "data_set = [row_one, row_two, row_three, row_four, row_five]\n",
     "\n",
-    "print(data_set[0] [0])"
+    "print(data_set[0][0])"
    ]
   },
   {
@@ -610,9 +782,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.2\n",
+      "21.0\n"
+     ]
+    }
+   ],
    "source": [
     "row_1 = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_2 = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
@@ -622,7 +803,14 @@
     "\n",
     "\n",
     "# Start your code below:\n",
-    "\n"
+    "app_data_set = [row_1, row_2, row_3, row_4, row_5]\n",
+    "sum_rating = 0\n",
+    "average_rating = 0\n",
+    "for x in app_data_set:\n",
+    "    sum_rating += x[4]\n",
+    "    average_rating = sum_rating/len(app_data_set)\n",
+    "print(average_rating)\n",
+    "print(sum_rating)"
    ]
   },
   {
@@ -641,25 +829,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic'], ['284882215', 'Facebook', '389879808', 'USD', '0.0', '2974676', '212', '3.5', '3.5', '95.0', '4+', 'Social Networking', '37', '1', '29', '1'], ['389801252', 'Instagram', '113954816', 'USD', '0.0', '2161558', '1289', '4.5', '4.0', '10.23', '12+', 'Photo & Video', '37', '0', '29', '1'], ['529479190', 'Clash of Clans', '116476928', 'USD', '0.0', '2130805', '579', '4.5', '4.5', '9.24.12', '9+', 'Games', '38', '5', '18', '1'], ['420009108', 'Temple Run', '65921024', 'USD', '0.0', '1724546', '3842', '4.5', '4.0', '1.6.2', '9+', 'Games', '40', '5', '1', '1']]\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'AppleStore.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/pt/26yk257s5nd579ngn9gyw3k40000gn/T/ipykernel_22306/3265192497.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmy_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'AppleStore.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcsv\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mread_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mapps_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'AppleStore.csv'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7198"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -947,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
