--- a/Exercises/EN/Basic/03_Lists_and_For_Loops.ipynb
+++ b/Exercises/EN/Basic/03_Lists_and_For_Loops.ipynb
@@ -644,9 +644,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Facebook', 0.0, 'USD', 2974676, 3.5],\n",
+       " ['Instagram', 0.0, 'USD', 2161558, 4.5],\n",
+       " ['Clash of Clans', 0.0, 'USD', 2130805, 4.5],\n",
+       " ['Temple Run', 0.0, 'USD', 1724546, 4.5],\n",
+       " ['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "row_one = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_two = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
@@ -829,18 +844,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'AppleStore.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/pt/26yk257s5nd579ngn9gyw3k40000gn/T/ipykernel_22306/3265192497.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmy_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'AppleStore.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcsv\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mread_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mapps_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'AppleStore.csv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['', 'id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic'], ['1', '281656475', 'PAC-MAN Premium', '100788224', 'USD', '3.99', '21292', '26', '4', '4.5', '6.3.5', '4+', 'Games', '38', '5', '10', '1'], ['2', '281796108', 'Evernote - stay organized', '158578688', 'USD', '0', '161065', '26', '4', '3.5', '8.2.2', '4+', 'Productivity', '37', '5', '23', '1'], ['3', '281940292', 'WeatherBug - Local Weather, Radar, Maps, Alerts', '100524032', 'USD', '0', '188583', '2822', '3.5', '4.5', '5.0.0', '4+', 'Weather', '37', '5', '3', '1'], ['4', '282614216', 'eBay: Best App to Buy, Sell, Save! Online Shopping', '128512000', 'USD', '0', '262241', '649', '4', '4.5', '5.10.0', '12+', 'Shopping', '37', '5', '9', '1']]\n",
+      "id\n"
      ]
     }
    ],
@@ -853,9 +865,9 @@
     "\n",
     "#To print out the first five rows of apps_data\n",
     "print(apps_data[:5])\n",
-    "\n",
     "#To find out the length of our data set\n",
-    "len(apps_data)"
+    "len(apps_data[0])\n",
+    "print(apps_data[0][1])\n"
    ]
   },
   {
@@ -911,9 +923,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10\n",
+      "2\n",
+      "6\n",
+      "8\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "ratings = [3, 10, 2, 6, 8, 1]\n",
     "\n",
@@ -930,9 +955,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n",
+      "4.5\n",
+      "4.5\n",
+      "4.5\n",
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "app_data_set = [row_one, row_two, row_three, row_four, row_five]\n",
     "\n",
@@ -950,9 +987,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
+      "['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
+      "['Clash of Clans', 0.0, 'USD', 2130805, 4.5]\n",
+      "['Temple Run', 0.0, 'USD', 1724546, 4.5]\n",
+      "['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n"
+     ]
+    }
+   ],
    "source": [
     "app_data_set = [row_one, row_two, row_three, row_four, row_five]\n",
     "\n",
@@ -969,9 +1018,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
+      "['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
+      "['Clash of Clans', 0.0, 'USD', 2130805, 4.5]\n",
+      "['Temple Run', 0.0, 'USD', 1724546, 4.5]\n",
+      "['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n"
+     ]
+    }
+   ],
    "source": [
     "app_data_set = [row_one, row_two, row_three, row_four, row_five]\n",
     "\n",
@@ -1001,9 +1062,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
+      "['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
+      "['Clash of Clans', 0.0, 'USD', 2130805, 4.5]\n",
+      "['Temple Run', 0.0, 'USD', 1724546, 4.5]\n",
+      "['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n"
+     ]
+    }
+   ],
    "source": [
     "row_1 = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_2 = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
@@ -1014,7 +1087,8 @@
     "app_data_set = [row_1, row_2, row_3, row_4, row_5]\n",
     "\n",
     "# Start your code below:\n",
-    "\n"
+    "for row in app_data_set:\n",
+    "    print(row)\n"
    ]
   },
   {
@@ -1033,9 +1107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "2\n",
+      "1\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "a_list = [1, 2, 3]\n",
     "\n",
@@ -1063,9 +1150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "a_list = [1, 2, 3]\n",
     "\n",
@@ -1099,9 +1196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.2\n"
+     ]
+    }
+   ],
    "source": [
     "row_1 = ['Facebook', 0.0, 'USD', 2974676, 3.5]\n",
     "row_2 = ['Instagram', 0.0, 'USD', 2161558, 4.5]\n",
@@ -1109,8 +1214,22 @@
     "row_4 = ['Temple Run', 0.0, 'USD', 1724546, 4.5]\n",
     "row_5 = ['Pandora - Music & Radio', 0.0, 'USD', 1126879, 4.0]\n",
     "\n",
-    "app_data_set = [row_1, row_2, row_3, row_4, row_5]"
+    "app_data_set = [row_1, row_2, row_3, row_4, row_5]\n",
+    "\n",
+    "rating_sum = 0\n",
+    "for row in app_data_set:\n",
+    "    rating_sum += row[-1]\n",
+    "\n",
+    "avg_rating = rating_sum/len(app_data_set)\n",
+    "print(avg_rating)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
