flowcontrol notebook, playing with fibonaccis

--- a/Exercises/EN/Basic/04_Conditional_Statements.ipynb
+++ b/Exercises/EN/Basic/04_Conditional_Statements.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.5, 4.5, 4.5, 4.5, 4.0]\n"
+      "[4.0, 4.0, 3.5, 4.0, 4.5]\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
     "\n",
     "ratings = []\n",
     "for row in apps_data[1:]:\n",
-    "    rating = float(row[7])\n",
+    "    rating = float(row[8])\n",
     "    ratings.append(rating)\n",
     "    \n",
     "print(ratings[:5])"
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "ratings = []\n",
     "for row in apps_data[1:]: #we iterated over the apps_data[1:]\n",
     "    rating = float(row[7]) #Assign the rating as a float to a variable named rating.\n",
-    "    price = float(row[4]) #Assign the price as a float to a variable named price.\n",
+    "    price = float(row[5]) #Assign the price as a float to a variable named price.\n",
     "    \n",
     "    if price == 0.0: #If the price is equal to 0.0, that means this is a free app\n",
     "        ratings.append(rating)# we append the rating to the ratings list"
@@ -123,13 +123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3767258382642997\n"
+     ]
+    }
+   ],
    "source": [
     "## Start your code below:\n",
-    "\n",
-    "\n"
+    "free_apps_rating = []\n",
+    "for row in apps_data[1:]:\n",
+    "    price = float(row[5])\n",
+    "    rating = float(row[8])\n",
+    "    if price == 0.0:\n",
+    "        free_apps_rating.append(rating)\n",
+    "avg_rating_free = sum(free_apps_rating)/(len(free_apps_rating))\n",
+    "print(avg_rating_free)"
    ]
   },
   {
@@ -171,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +194,7 @@
        "bool"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,13 +377,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is free\n"
+     ]
+    }
+   ],
    "source": [
     "price = 0\n",
     "\n",
-    "#start your code here:\n"
+    "#start your code here:\n",
+    "if price == 0:\n",
+    "    print(\"this is free\")\n",
+    "elif price == 1:\n",
+    "    print(\"this is not free\")"
    ]
   },
   {
@@ -480,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +540,7 @@
     "\n",
     "Can you modify the code in the editor below to computer ``the average rating of non-free apps``?\n",
     "\n",
-    "1. Change the name of the empty list from free_apps_ratings to non_free_apps_raings.\n",
+    "1. Change the name of the empty list from free_apps_ratings to non_free_apps_ratings.\n",
     "2. Change the conditional statement <b> if price == 0.0 </b> to extract the ratings of non-free apps.\n",
     "3. Change free_apps_ratings.append(rating) and append to the new list non_free_apps_ratings.\n",
     "4. Compute the average value by summing up the values in non_free_apps_ratings and dividing by the length of this list. Assign the result to ``avg_rating_non_free``.\n"
@@ -522,9 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.720948742438714\n"
+     ]
+    }
+   ],
    "source": [
     "# INITIAL CODE\n",
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
@@ -532,14 +566,15 @@
     "read_file = reader(opened_file)\n",
     "apps_data = list(read_file)\n",
     "\n",
-    "free_apps_ratings = []\n",
+    "non_free_apps_ratings = []\n",
     "for row in apps_data[1:]:\n",
-    "    rating = float(row[7])\n",
-    "    price = float(row[4])   \n",
-    "    if price == 0.0:\n",
-    "        free_apps_ratings.append(rating)\n",
+    "    rating = float(row[8])\n",
+    "    price = float(row[5])   \n",
+    "    if price != 0.0:\n",
+    "        non_free_apps_ratings.append(rating)\n",
     "    \n",
-    "avg_rating_free = sum(free_apps_ratings) / len(free_apps_ratings)"
+    "avg_rating_non_free = sum(non_free_apps_ratings) / len(non_free_apps_ratings)\n",
+    "print(avg_rating_non_free)"
    ]
   },
   {
@@ -552,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -618,8 +653,8 @@
     "games_ratings = [] #initialize an empty list named games_ratings\n",
     "\n",
     "for row in apps_data[1:]: \n",
-    "    rating = float(row[7]) #extract the rating information and assign the rating to the variable rating\n",
-    "    genre = row[11] #extract the genre information and assign the genre to the variable named genre\n",
+    "    rating = float(row[8]) #extract the rating information and assign the rating to the variable rating\n",
+    "    genre = row[12] #extract the genre information and assign the genre to the variable named genre\n",
     "    \n",
     "    if genre == 'Games': #if the genre is 'Games'\n",
     "        games_ratings.append(rating) # append the rating value stored in rating to the list games_ratings\n",
@@ -638,9 +673,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.065859070464694\n"
+     ]
+    }
+   ],
    "source": [
     "#reading the dataset\n",
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
@@ -656,7 +699,13 @@
     "\n",
     "#Compute the average rating of non-gaming apps\n",
     "#and assign the result to a variable named avg_rating_non_games\n",
-    "\n"
+    "non_games_rating = []\n",
+    "for row in apps_data[1:]:\n",
+    "    if row[12] != \"Games\":\n",
+    "        non_games_rating.append(float(row[5]))\n",
+    "\n",
+    "avg_ratings_non_games = sum(non_games_rating)/len(non_games_rating)\n",
+    "print(avg_ratings_non_games)\n"
    ]
   },
   {
@@ -788,14 +837,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "[5.0, 5.0, 5.0, 5.0, 5.0]\n"
      ]
     },
     {
@@ -804,7 +853,7 @@
        "4029"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,8 +862,8 @@
     "games_social_ratings = []\n",
     "\n",
     "for row in apps_data[1:]:\n",
-    "    ratings = float(row[7])\n",
-    "    genre = row[11]\n",
+    "    ratings = float(row[8])\n",
+    "    genre = row[12]\n",
     "    \n",
     "    if genre == 'Social Networking' or genre == 'Games':\n",
     "        games_social_ratings.append(rating)\n",
@@ -1054,9 +1103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8904235727440146\n"
+     ]
+    }
+   ],
    "source": [
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
     "from csv import reader\n",
@@ -1064,16 +1121,19 @@
     "apps_data = list(read_file)\n",
     "\n",
     "free_games_social_ratings = []\n",
+    "non_free_games_social_ratings = []\n",
     "for row in apps_data[1:]:\n",
-    "    rating = float(row[7])\n",
-    "    genre = row[11]\n",
-    "    price = float(row[4])\n",
+    "    rating = float(row[8])\n",
+    "    genre = row[12]\n",
+    "    price = float(row[5])\n",
     "    \n",
     "    if (genre == 'Social Networking' or genre == 'Games') and price == 0:\n",
     "        free_games_social_ratings.append(rating)\n",
-    "        \n",
+    "    if (genre == 'Social Networking' or genre == 'Games') and price > 0:\n",
+    "        non_free_games_social_ratings.append(rating)\n",
     "avg_free = sum(free_games_social_ratings) / len(free_games_social_ratings)\n",
-    "\n",
+    "avg_non_free = sum(non_free_games_social_ratings) / len(non_free_games_social_ratings)\n",
+    "print(avg_non_free)\n",
     "# Non-free apps (average)"
    ]
   },
@@ -1555,9 +1615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['', 'id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic', 'price_label'], ['1', '281656475', 'PAC-MAN Premium', '100788224', 'USD', '3.99', '21292', '26', '4', '4.5', '6.3.5', '4+', 'Games', '38', '5', '10', '1', 'affordable'], ['2', '281796108', 'Evernote - stay organized', '158578688', 'USD', '0', '161065', '26', '4', '3.5', '8.2.2', '4+', 'Productivity', '37', '5', '23', '1', 'free'], ['3', '281940292', 'WeatherBug - Local Weather, Radar, Maps, Alerts', '100524032', 'USD', '0', '188583', '2822', '3.5', '4.5', '5.0.0', '4+', 'Weather', '37', '5', '3', '1', 'free'], ['4', '282614216', 'eBay: Best App to Buy, Sell, Save! Online Shopping', '128512000', 'USD', '0', '262241', '649', '4', '4.5', '5.10.0', '12+', 'Shopping', '37', '5', '9', '1', 'free']]\n"
+     ]
+    }
+   ],
    "source": [
     "# INITIAL CODE\n",
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
@@ -1566,8 +1634,18 @@
     "apps_data = list(read_file)\n",
     "\n",
     "for app in apps_data[1:]:\n",
-    "    price = float(app[4])\n",
-    "    # Complete code from here"
+    "    price = float(app[5])\n",
+    "    # Complete code from here\n",
+    "    if price == 0.0:\n",
+    "        app.append('free')\n",
+    "    elif price < 20 and price > 0:\n",
+    "        app.append('affordable')\n",
+    "    elif price < 50 and price >= 20:\n",
+    "        app.append('expensive')\n",
+    "    elif price >= 50:\n",
+    "        app.append('very expensive')\n",
+    "apps_data[0].append('price_label')\n",
+    "print(apps_data[:5])"
    ]
   }
  ],
@@ -1587,7 +1665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
