--- a/Notebooks/Python_Basic/03_Functions.ipynb
+++ b/Notebooks/Python_Basic/03_Functions.ipynb
@@ -619,7 +619,7 @@
      "output_type": "stream",
      "text": [
       "9227465\n",
-      "1.5721888542175293\n"
+      "1.4713411331176758\n"
      ]
     }
    ],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
      "output_type": "stream",
      "text": [
       "9227465\n",
-      "0.00010704994201660156\n"
+      "0.0001430511474609375\n"
      ]
     }
    ],
@@ -665,7 +665,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0027569289207458494\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_fibonacci(n):\n",
+    "    x = 1\n",
+    "    y = 0\n",
+    "    for number in range(n-1):\n",
+    "        x = x + y\n",
+    "        y = x\n",
+    "    return y\n",
+    "\n",
+    "avg_my = []\n",
+    "for x in range(1000):\n",
+    "    t0_my = time.time()\n",
+    "    my_fibonacci(35)\n",
+    "    fib_time = (time.time()-t0_my)\n",
+    "    avg_my.append(fib_time)\n",
+    "\n",
+    "avg_my = sum(avg_my) / len(avg_my)\n",
+    "\n",
+    "avg_good = []\n",
+    "for x in range(1000):\n",
+    "    t0_good = time.time()\n",
+    "    good_fibonacci(35)\n",
+    "    fib_time = (time.time()-t0_my)\n",
+    "    avg_good.append(fib_time)\n",
+    "\n",
+    "avg_good = sum(avg_good) / len(avg_good)\n",
+    "\n",
+    "\n",
+    "print(avg_good)\n",
+    "print(avg_my)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
