--- a/Exercises/EN/Basic/08_Dictionaries_And_Frequency_Tables.ipynb
+++ b/Exercises/EN/Basic/08_Dictionaries_And_Frequency_Tables.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -157,12 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "987 622\n"
+     ]
+    }
+   ],
    "source": [
     "### Start your code below:\n",
-    "\n"
+    "over_9 = content_ratings['9+']\n",
+    "over_17 = content_ratings['17+']\n",
+    "print(over_9, over_17)"
    ]
   },
   {
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,13 +369,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key_1': 'first_value', 'key_2': 2, 'key_3': 3.14, 'key_4': True, 'key_5': [4, 2, 1], 'key_6': {'inner_key': 6}}\n"
+     ]
+    }
+   ],
    "source": [
     "### Start your code below:\n",
     "\n",
-    "\n"
+    "d_1 = {'key_1': 'first_value',\n",
+    " 'key_2': 2, \n",
+    " 'key_3': 3.14, \n",
+    " 'key_4': True,\n",
+    " 'key_5': [4,2,1],\n",
+    " 'key_6': {'inner_key' : 6} \n",
+    " }\n",
+    "print(d_1)"
    ]
   },
   {
@@ -454,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +502,7 @@
        "{'4+': 3, '9+': 2, '12+': 1, '17+': 1}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,16 +536,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n"
+     ]
+    }
+   ],
    "source": [
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
     "from csv import reader\n",
     "read_file = reader(opened_file)\n",
     "apps_data = list(read_file)\n",
     "### Start your code below:\n",
-    "\n"
+    "\n",
+    "content_ratings = {'4+':0, '9+':0, '12+':0, '17+':0}\n",
+    "for rating in apps_data[1:]:\n",
+    "    if rating[11] in content_ratings:\n",
+    "        content_ratings[rating[11]] += 1\n",
+    "\n",
+    "print(content_ratings)"
    ]
   },
   {
@@ -633,9 +672,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'4+': 4433, '12+': 1155, '17+': 622, '9+': 987}\n"
+     ]
+    }
+   ],
    "source": [
     "opened_file = open('AppleStore.csv', encoding='utf8')\n",
     "from csv import reader\n",
@@ -643,7 +690,14 @@
     "apps_data = list(read_file)\n",
     "\n",
     "### Start your code here:\n",
-    "\n"
+    "\n",
+    "content_ratings = {}\n",
+    "for c_rating in apps_data[1:]:\n",
+    "    if c_rating[11] in content_ratings:\n",
+    "        content_ratings[c_rating[11]] += 1\n",
+    "    else:\n",
+    "        content_ratings[c_rating[11]] = 1\n",
+    "print(content_ratings)"
    ]
   },
   {
@@ -687,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
