--- a/Exercises/EN/Basic/05_Control_Flow.ipynb
+++ b/Exercises/EN/Basic/05_Control_Flow.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,19 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "51.17707003576188\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(time.time()/((3600*24*365)+13)) # The Unix time started in 1970..."
+    "print(time.time()/((3600*24*365)+13)) # The Unix time started in 1970...\n"
    ]
   },
   {
@@ -68,7 +60,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for number in range(1, 101):\n",
+    "    if number%3 == 0 and number%5 == 0:\n",
+    "        print('FizzBuzz')\n",
+    "    elif number%3 == 0:\n",
+    "        print('Fizz')\n",
+    "    elif number %5 == 0:\n",
+    "        print('Buzz')\n",
+    "    else:\n",
+    "        print(number)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +104,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def elem_printer(a):\n",
+    "    indexer = -1\n",
+    "    for elem in a:\n",
+    "        try:   \n",
+    "            indexer += 1\n",
+    "            if type(elem) in [type(0), type(0.0), type('string')]:\n",
+    "                print(elem, a[indexer-1], a[indexer+1])\n",
+    "            elif type(elem) in [type((0,0)), type([ ]), type({\"key\":\"value\"}), type({\"a\" ,\"b\"}), type(2 + 3j)]:\n",
+    "                print(elem, a[indexer-1], a[indexer+1])\n",
+    "            else:\n",
+    "                continue\n",
+    "        except:\n",
+    "            break\n",
+    "elem_printer(list1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +133,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "def throw_dice():\n",
+    "    dice1 = random.randint(1,6)\n",
+    "    dice2 = random.randint(1,6)\n",
+    "    return dice1 + dice2\n",
+    "\n",
+    "observed_list = []\n",
+    "frequencytable = {}\n",
+    "for x in range(10000):\n",
+    "    result = throw_dice()\n",
+    "    observed_list.append(result)\n",
+    "    if result in frequencytable.keys():\n",
+    "        frequencytable[result] += 1\n",
+    "    else:\n",
+    "        frequencytable[result] = 1\n",
+    "\n",
+    "total = 0\n",
+    "for key,value in frequencytable.items():\n",
+    "    total = total + (key*value)\n",
+    "\n",
+    "\n",
+    "\n",
+    "avg = total/10000\n",
+    "print(avg)\n",
+    "print(sorted(frequencytable.items()))\n",
+    "\n",
+    "avrg = sum(observed_list)/len(observed_list)\n",
+    "print(avrg)\n",
+    "\n",
+    "plt.hist(observed_list, 11)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,10 +182,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 7, 13, 29]\n",
+      "0.0014848709106445312\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "def prime_checker(number):\n",
+    "    for i in range(2,number):\n",
+    "        if float(number) % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def primefacorizater_1(number):\n",
+    "    prime_factors = []\n",
+    "    for x in range(1,number):\n",
+    "        if number%x == 0:\n",
+    "            prime_factors.append(x)\n",
+    "            number = number/x\n",
+    "            x = 1\n",
+    "    return prime_factors \n",
+    "\n",
+    "t0 = time.time()\n",
+    "print(primefacorizater_1(13195))\n",
+    "timestamp = time.time()\n",
+    "runtime = timestamp-t0\n",
+    "print(runtime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[71, 839, 1471, 6857]\n",
+      "0.0015418529510498047\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def prime_factorizator_2(number):\n",
+    "    prime_factors = []\n",
+    "    i = 1\n",
+    "    while (i < number):\n",
+    "        i += 1\n",
+    "        if number%i == 0:\n",
+    "            prime_factors.append(i)\n",
+    "            number = number/i\n",
+    "            i = 1\n",
+    "    return prime_factors\n",
+    "\n",
+    "t0 = time.time()\n",
+    "print(prime_factorizator_2(600851475143))\n",
+    "timestamp = time.time()\n",
+    "runtime = timestamp-t0\n",
+    "print(runtime)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,35 +274,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'gnirts modnar A'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'A random string'[-1::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "906609\n"
+     ]
+    }
+   ],
+   "source": [
+    "def string_reverser(string_in):\n",
+    "    reversed_string = string_in[-1::-1]\n",
+    "    return reversed_string\n",
+    "\n",
+    "def palindrom_checker(string_in):\n",
+    "    if string_in == string_reverser(string_in):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "largest_palindrom = 0\n",
+    "for i in range(100,1000):\n",
+    "    for j in range(100,1000):\n",
+    "        product = i * j\n",
+    "        if palindrom_checker(str(product)) == True and product > largest_palindrom:\n",
+    "            largest_palindrom = product\n",
+    "\n",
+    "print(largest_palindrom)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,10 +347,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "525\n",
+      "837799\n"
+     ]
+    }
+   ],
+   "source": [
+    "longest_chain = 0\n",
+    "chain = []\n",
+    "longest_starting_number = 0\n",
+    "for i in range(1, 1000001):\n",
+    "    j = i\n",
+    "    chain = []\n",
+    "    chain.append(j)\n",
+    "\n",
+    "    while j != 1:\n",
+    "        if j % 2 == 0:\n",
+    "            j = j/2\n",
+    "            chain.append(j)\n",
+    "        else:\n",
+    "            j = 3*j + 1\n",
+    "            chain.append(j)\n",
+    "    if len(chain) > longest_chain:\n",
+    "        longest_chain = len(chain)\n",
+    "        longest_starting_number = i\n",
+    "print(longest_chain)\n",
+    "print(longest_starting_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(999999, 259), (999998, 259), (999997, 114), (999996, 114), (999995, 259)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sequence = []\n",
+    "for i in range(1, 1000000):\n",
+    "    j = i\n",
+    "    chain = []\n",
+    "    chain.append(j)\n",
+    "    while j != 1:\n",
+    "        if j % 2 == 0:\n",
+    "            j = j/2\n",
+    "            chain.append(j)\n",
+    "        else:\n",
+    "            j = 3*j + 1\n",
+    "            chain.append(j)\n",
+    "    sequence.append((i, len(chain)))\n",
+    "\n",
+    "\n",
+    "print(sorted(sequence, key = lambda x: x[1], reverse=True)[0:5])"
+   ]
   }
  ],
  "metadata": {
@@ -234,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
